Added media queries

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <h1>Tan Copeland</h1>
 <h2>“Everyone has a story, and every good story deserves to be told.”</h2>
 
+<div id="sidebar">
+  <h3>Fast Facts</h3>
+  <u1>
+    <li>Fact</li>
+    <li>Fact</li>
+  </u1>
+</div>
+
 <h3>Who am I?</h3>
 <p><img src="images/MeAndFriends.PNG" id="pic1">
   My name is Tan Copeland. I am seventeen years old and I live in San Diego, California with my mother and father. I attend the high school <a href="https://cc.sduhsd.net/" target="_blank">Canyon Crest Academy</a> as a junior and I am a member of the <a href="https://sites.google.com/view/cca-envision/home?authuser=0" target="_blank">Envision Visual Arts Conservatory</a> program. I have a lot of friends and have many connections with different people, as I find meeting and getting to know new people very fun and exciting. Although I have my own issues and worries about life, I would say that I am very content with how my life is going and overall, I am happy. I greatly believe that I have a big future ahead of me.</p>
